namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-jdl-visulizer-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-jdl-visulizer-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "jdl-what-works-tool"
    cloud-platform.justice.gov.uk/application: "What Works Tool"
    cloud-platform.justice.gov.uk/owner: "justice data lab: justice.datalab@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/jdl-visulizer"
    cloud-platform.justice.gov.uk/team-name: "justice-data-lab"
    cloud-platform.justice.gov.uk/review-after: ""
